--- a/ss_prediction.ipynb
+++ b/ss_prediction.ipynb
@@ -322,7 +322,7 @@
     ")\n",
     "\n",
     "checkpoint = callbacks.ModelCheckpoint(\n",
-    "    'ss_pred_model.keras',\n",
+    "    './ss_pred_model.keras',\n",
     "    monitor='val_truncated_accuracy',\n",
     "    save_best_only=True,\n",
     "    mode='max'\n",
