--- a/ss_prediction.ipynb
+++ b/ss_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,134 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 8.2093 - accuracy: 0.7791 - truncated_accuracy: 0.4020\n",
-      "Epoch 1: val_truncated_accuracy improved from -inf to 0.41801, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 82s 1s/step - loss: 8.2093 - accuracy: 0.7791 - truncated_accuracy: 0.4020 - val_loss: 5.0884 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 2/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 3.0293 - accuracy: 0.8315 - truncated_accuracy: 0.4434\n",
-      "Epoch 2: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 32s 941ms/step - loss: 3.0293 - accuracy: 0.8315 - truncated_accuracy: 0.4434 - val_loss: 1.7765 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 3/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 1.1217 - accuracy: 0.8607 - truncated_accuracy: 0.6190\n",
-      "Epoch 3: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 32s 953ms/step - loss: 1.1217 - accuracy: 0.8607 - truncated_accuracy: 0.6190 - val_loss: 0.7998 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 4/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.5098 - accuracy: 0.9099 - truncated_accuracy: 0.6903\n",
-      "Epoch 4: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 893ms/step - loss: 0.5098 - accuracy: 0.9099 - truncated_accuracy: 0.6903 - val_loss: 0.4978 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 5/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.3105 - accuracy: 0.9234 - truncated_accuracy: 0.7282\n",
-      "Epoch 5: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 892ms/step - loss: 0.3105 - accuracy: 0.9234 - truncated_accuracy: 0.7282 - val_loss: 0.3778 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 6/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.2325 - accuracy: 0.9037 - truncated_accuracy: 0.7412\n",
-      "Epoch 6: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 891ms/step - loss: 0.2325 - accuracy: 0.9037 - truncated_accuracy: 0.7412 - val_loss: 0.3752 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 7/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1894 - accuracy: 0.9460 - truncated_accuracy: 0.7564\n",
-      "Epoch 7: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 878ms/step - loss: 0.1894 - accuracy: 0.9460 - truncated_accuracy: 0.7564 - val_loss: 0.3163 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 8/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1949 - accuracy: 0.7527 - truncated_accuracy: 0.7550\n",
-      "Epoch 8: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 884ms/step - loss: 0.1949 - accuracy: 0.7527 - truncated_accuracy: 0.7550 - val_loss: 0.3284 - val_accuracy: 0.8605 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 9/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1808 - accuracy: 0.7158 - truncated_accuracy: 0.7616\n",
-      "Epoch 9: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 880ms/step - loss: 0.1808 - accuracy: 0.7158 - truncated_accuracy: 0.7616 - val_loss: 0.3147 - val_accuracy: 0.8555 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 10/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1745 - accuracy: 0.8578 - truncated_accuracy: 0.7650\n",
-      "Epoch 10: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 30s 897ms/step - loss: 0.1745 - accuracy: 0.8578 - truncated_accuracy: 0.7650 - val_loss: 0.3098 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 11/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1758 - accuracy: 0.7282 - truncated_accuracy: 0.7621\n",
-      "Epoch 11: val_truncated_accuracy did not improve from 0.41801\n",
-      "34/34 [==============================] - 31s 899ms/step - loss: 0.1758 - accuracy: 0.7282 - truncated_accuracy: 0.7621 - val_loss: 0.3003 - val_accuracy: 0.0922 - val_truncated_accuracy: 0.3993\n",
-      "Epoch 12/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1698 - accuracy: 0.4635 - truncated_accuracy: 0.7661\n",
-      "Epoch 12: val_truncated_accuracy improved from 0.41801 to 0.49418, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 32s 947ms/step - loss: 0.1698 - accuracy: 0.4635 - truncated_accuracy: 0.7661 - val_loss: 0.2807 - val_accuracy: 0.1161 - val_truncated_accuracy: 0.4942\n",
-      "Epoch 13/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1661 - accuracy: 0.3732 - truncated_accuracy: 0.7698\n",
-      "Epoch 13: val_truncated_accuracy improved from 0.49418 to 0.67990, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 32s 956ms/step - loss: 0.1661 - accuracy: 0.3732 - truncated_accuracy: 0.7698 - val_loss: 0.2603 - val_accuracy: 0.9265 - val_truncated_accuracy: 0.6799\n",
-      "Epoch 14/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1690 - accuracy: 0.7967 - truncated_accuracy: 0.7744\n",
-      "Epoch 14: val_truncated_accuracy did not improve from 0.67990\n",
-      "34/34 [==============================] - 30s 892ms/step - loss: 0.1690 - accuracy: 0.7967 - truncated_accuracy: 0.7744 - val_loss: 0.2857 - val_accuracy: 0.8924 - val_truncated_accuracy: 0.5375\n",
-      "Epoch 15/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1835 - accuracy: 0.5373 - truncated_accuracy: 0.7700\n",
-      "Epoch 15: val_truncated_accuracy improved from 0.67990 to 0.76115, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 34s 1000ms/step - loss: 0.1835 - accuracy: 0.5373 - truncated_accuracy: 0.7700 - val_loss: 0.2139 - val_accuracy: 0.9438 - val_truncated_accuracy: 0.7611\n",
-      "Epoch 16/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1669 - accuracy: 0.7353 - truncated_accuracy: 0.7742\n",
-      "Epoch 16: val_truncated_accuracy did not improve from 0.76115\n",
-      "34/34 [==============================] - 31s 915ms/step - loss: 0.1669 - accuracy: 0.7353 - truncated_accuracy: 0.7742 - val_loss: 0.2012 - val_accuracy: 0.9428 - val_truncated_accuracy: 0.7507\n",
-      "Epoch 17/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1663 - accuracy: 0.7460 - truncated_accuracy: 0.7694\n",
-      "Epoch 17: val_truncated_accuracy did not improve from 0.76115\n",
-      "34/34 [==============================] - 32s 955ms/step - loss: 0.1663 - accuracy: 0.7460 - truncated_accuracy: 0.7694 - val_loss: 2.2399 - val_accuracy: 0.8655 - val_truncated_accuracy: 0.4180\n",
-      "Epoch 18/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.2015 - accuracy: 0.9333 - truncated_accuracy: 0.7726\n",
-      "Epoch 18: val_truncated_accuracy did not improve from 0.76115\n",
-      "34/34 [==============================] - 32s 935ms/step - loss: 0.2015 - accuracy: 0.9333 - truncated_accuracy: 0.7726 - val_loss: 0.2206 - val_accuracy: 0.9360 - val_truncated_accuracy: 0.7491\n",
-      "Epoch 19/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.2203 - accuracy: 0.2356 - truncated_accuracy: 0.7602\n",
-      "Epoch 19: val_truncated_accuracy improved from 0.76115 to 0.77542, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 33s 977ms/step - loss: 0.2203 - accuracy: 0.2356 - truncated_accuracy: 0.7602 - val_loss: 0.2317 - val_accuracy: 0.1907 - val_truncated_accuracy: 0.7754\n",
-      "Epoch 20/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1819 - accuracy: 0.1720 - truncated_accuracy: 0.7723\n",
-      "Epoch 20: val_truncated_accuracy improved from 0.77542 to 0.79386, saving model to .\\ss_pred_modelstuff.keras\n",
-      "34/34 [==============================] - 33s 984ms/step - loss: 0.1819 - accuracy: 0.1720 - truncated_accuracy: 0.7723 - val_loss: 0.1862 - val_accuracy: 0.1924 - val_truncated_accuracy: 0.7939\n",
-      "Epoch 21/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1670 - accuracy: 0.1783 - truncated_accuracy: 0.7745\n",
-      "Epoch 21: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 32s 934ms/step - loss: 0.1670 - accuracy: 0.1783 - truncated_accuracy: 0.7745 - val_loss: 0.1938 - val_accuracy: 0.1882 - val_truncated_accuracy: 0.7751\n",
-      "Epoch 22/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1643 - accuracy: 0.3520 - truncated_accuracy: 0.7822\n",
-      "Epoch 22: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 33s 957ms/step - loss: 0.1643 - accuracy: 0.3520 - truncated_accuracy: 0.7822 - val_loss: 0.1729 - val_accuracy: 0.9514 - val_truncated_accuracy: 0.7899\n",
-      "Epoch 23/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1636 - accuracy: 0.6219 - truncated_accuracy: 0.7764\n",
-      "Epoch 23: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 31s 927ms/step - loss: 0.1636 - accuracy: 0.6219 - truncated_accuracy: 0.7764 - val_loss: 0.1754 - val_accuracy: 0.1987 - val_truncated_accuracy: 0.7923\n",
-      "Epoch 24/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1645 - accuracy: 0.4455 - truncated_accuracy: 0.7768\n",
-      "Epoch 24: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 32s 957ms/step - loss: 0.1645 - accuracy: 0.4455 - truncated_accuracy: 0.7768 - val_loss: 0.1749 - val_accuracy: 0.9516 - val_truncated_accuracy: 0.7904\n",
-      "Epoch 25/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1684 - accuracy: 0.5502 - truncated_accuracy: 0.7774\n",
-      "Epoch 25: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 31s 925ms/step - loss: 0.1684 - accuracy: 0.5502 - truncated_accuracy: 0.7774 - val_loss: 0.1690 - val_accuracy: 0.9504 - val_truncated_accuracy: 0.7838\n",
-      "Epoch 26/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1716 - accuracy: 0.5313 - truncated_accuracy: 0.7781\n",
-      "Epoch 26: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 31s 923ms/step - loss: 0.1716 - accuracy: 0.5313 - truncated_accuracy: 0.7781 - val_loss: 0.1803 - val_accuracy: 0.9487 - val_truncated_accuracy: 0.7781\n",
-      "Epoch 27/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1578 - accuracy: 0.8031 - truncated_accuracy: 0.7784\n",
-      "Epoch 27: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 31s 925ms/step - loss: 0.1578 - accuracy: 0.8031 - truncated_accuracy: 0.7784 - val_loss: 0.1724 - val_accuracy: 0.9489 - val_truncated_accuracy: 0.7778\n",
-      "Epoch 28/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1780 - accuracy: 0.9388 - truncated_accuracy: 0.7721\n",
-      "Epoch 28: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 32s 941ms/step - loss: 0.1780 - accuracy: 0.9388 - truncated_accuracy: 0.7721 - val_loss: 0.3427 - val_accuracy: 0.8960 - val_truncated_accuracy: 0.5677\n",
-      "Epoch 29/100\n",
-      "34/34 [==============================] - ETA: 0s - loss: 0.1668 - accuracy: 0.7046 - truncated_accuracy: 0.7747Restoring model weights from the end of the best epoch: 25.\n",
-      "\n",
-      "Epoch 29: val_truncated_accuracy did not improve from 0.79386\n",
-      "34/34 [==============================] - 31s 914ms/step - loss: 0.1668 - accuracy: 0.7046 - truncated_accuracy: 0.7747 - val_loss: 1.2996 - val_accuracy: 0.8700 - val_truncated_accuracy: 0.4365\n",
-      "Epoch 29: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.device('/GPU:1'):\n",
     "    history = model.fit(x_train, y_train,\n",
@@ -225,48 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_5\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " input_6 (InputLayer)        [(None, None, 41)]        0         \n",
-      "                                                                 \n",
-      " deep_inception_block_11 (De  (None, None, 900)        1278692   \n",
-      " epInception_block)                                              \n",
-      "                                                                 \n",
-      " deep_inception_block_12 (De  (None, None, 900)        2062100   \n",
-      " epInception_block)                                              \n",
-      "                                                                 \n",
-      " conv1d_646 (Conv1D)         (None, None, 100)         1710100   \n",
-      "                                                                 \n",
-      " time_distributed_14 (TimeDi  (None, None, 256)        25856     \n",
-      " stributed)                                                      \n",
-      "                                                                 \n",
-      " dropout_9 (Dropout)         (None, None, 256)         0         \n",
-      "                                                                 \n",
-      " time_distributed_15 (TimeDi  (None, None, 128)        32896     \n",
-      " stributed)                                                      \n",
-      "                                                                 \n",
-      " dropout_10 (Dropout)        (None, None, 128)         0         \n",
-      "                                                                 \n",
-      " time_distributed_16 (TimeDi  (None, None, 3)          387       \n",
-      " stributed)                                                      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 5,110,031\n",
-      "Trainable params: 5,067,985\n",
-      "Non-trainable params: 42,046\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_model = keras.models.load_model('ss_pred_model.keras', \n",
     "                                     custom_objects={\n",
@@ -280,23 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test, y_test = get_data(path+'blindTest/','list.txt',encode_y=False, padding_x=True, padding_y=False, test=True)"
+    "x_test, y_test = get_data(path+'blindTest/','list.txt',encode_y=False, padding_x=True, padding_y=False, test=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11/11 [==============================] - 7s 198ms/step\n",
+      "11/11 [==============================] - 9s 172ms/step\n",
       "0.7670230875625067\n"
      ]
     }
@@ -304,7 +140,7 @@
    "source": [
     "ss_map = {'C': 0, 'H': 1, 'E': 2}\n",
     "from_aa = {0: 'C', 1: 'H', 2: 'E'}\n",
-    "predictions_hot = test_model.predict(x_test)\n",
+    "predictions_hot = test_model.predict(np.array(x_test))\n",
     "predictions = []\n",
     "for prediction in predictions_hot:\n",
     "    dssp = ''\n",
